--- a/Content.Client/_PS/CargoStorage/UI/CargoStorageMenu.xaml
+++ b/Content.Client/_PS/CargoStorage/UI/CargoStorageMenu.xaml
@@ -81,6 +81,13 @@
                     </BoxContainer>
                     <Button Name="ClearSearchButton" Access="Public" Text="✖" />
                 </BoxContainer>
+                <Button Name="PurchaseLooseCart"
+                        Access="Public"
+                        ToolTip=""
+                        HorizontalExpand="True"
+                        Margin="5 0 5 0"
+                        Text="{Loc 'cargo-storage-request-cart-loose-button'}"
+                        StyleClasses="LabelSubText" />
                 <Button Name="PurchaseCart"
                         Access="Public"
                         ToolTip=""
