--- a/Content.Client/_PS/Expadition/ExpaditionMenu.xaml
+++ b/Content.Client/_PS/Expadition/ExpaditionMenu.xaml
@@ -15,18 +15,26 @@
                       MinSize="50 50"
                       Margin="8">
 
-            <Button Name="StartExpaditionButton"
-                    Access="Public"
-                    ToolTip=""
-                    HorizontalExpand="True"
-                    Margin="5 0 5 0"
-                    Text="{Loc 'expadition-console-start-button'}"
-                    StyleClasses="LabelSubText" />
+            <BoxContainer Orientation="Horizontal"
+                          Margin="8">
+                <Label Text="{Loc 'expadition-console-threat-level'}"
+                       StyleClasses="LabelTitle" />
+                <!-- <Slider Name="LevelSlider" Size="100 40" MinValue="1" MaxValue="100" HorizontalExpand="True" /> -->
+                <!-- <Label Name="LevelLabel" Text="0" StyleClasses="LabelSubText" /> -->
+                <Button Name="StartExpaditionButton"
+                        Access="Public"
+                        ToolTip=""
+                        HorizontalExpand="True"
+                        Margin="5 0 5 0"
+                        Text="{Loc 'expadition-console-start-button'}"
+                        StyleClasses="LabelSubText" />
+            </BoxContainer>
 
         </BoxContainer>
         <BoxContainer Name="ContentFooter" HorizontalExpand="True" SetHeight="28" Margin="1 0 2 1">
             <controls:StripeBack HasBottomEdge="False" HasMargins="False" HorizontalExpand="True">
-                <Label Text="Robust#OS ™" VerticalAlignment="Center" HorizontalAlignment="Right" HorizontalExpand="True"
+                <Label Text="Robust#OS ™" VerticalAlignment="Center" HorizontalAlignment="Right"
+                       HorizontalExpand="True"
                        Margin="6 0" StyleClasses="PdaContentFooterText" />
             </controls:StripeBack>
         </BoxContainer>
