--- a/Content.Client/_PS/Terradrop/TerradropConsoleMenu.xaml
+++ b/Content.Client/_PS/Terradrop/TerradropConsoleMenu.xaml
@@ -1,6 +1,9 @@
 ﻿<controls:FancyWindow xmlns="https://spacestation14.io"
+                      xmlns:gfx="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client"
                       xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
-                      MinSize="1000 500"
+                      xmlns:ps="clr-namespace:Content.Client._PS.Terradrop"
+                      SetSize="1000 600"
+                      MinSize="800 400"
                       Title="{Loc 'terradrop-console-menu-title'}">
     <BoxContainer Name="ViewContainer"
                   HorizontalExpand="True"
@@ -27,6 +30,60 @@
                         Text="{Loc 'terradrop-console-start-button'}"
                         StyleClasses="LabelSubText" />
             </BoxContainer>
+
+            <BoxContainer Orientation="Horizontal"
+                      HorizontalExpand="True"
+                      VerticalExpand="True">
+            <BoxContainer Orientation="Vertical"
+                          VerticalExpand="True"
+                          HorizontalExpand="True"
+                          SizeFlagsStretchRatio="3"
+                          Margin="0 0 0 10">
+                <PanelContainer Name="ResearchesContainer" VerticalExpand="True" HorizontalExpand="True">
+                    <PanelContainer.PanelOverride>
+                        <gfx:StyleBoxFlat BackgroundColor="#0F1419" />
+                    </PanelContainer.PanelOverride>
+                    <!-- Add ScrollContainer - vertical only -->
+                    <ScrollContainer
+                        Name="MapScrollContainer"
+                        Access="Public"
+                        HorizontalExpand="True"
+                        VerticalExpand="True"
+                        HScrollEnabled="False"
+                        VScrollEnabled="True"
+                        ReserveScrollbarSpace="True"
+                        StyleClasses="PdaScrollContainer">
+                        <ps:TerradropContainerPanel
+                            HorizontalExpand="True"
+                            VerticalExpand="True"
+                            Name="DragContainer"
+                            MouseFilter="Pass"
+                            RectClipContent="True"
+                            HorizontalAlignment="Left">
+                            <!-- There lives all of the terradrop maps -->
+                        </ps:TerradropContainerPanel>
+                    </ScrollContainer>
+                    <Button Name="RecenterButton" Text="{Loc 'terradrop-console-menu-recenter-button'}" MinHeight="40" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5 -5"/>
+                </PanelContainer>
+            </BoxContainer>
+            <PanelContainer SizeFlagsStretchRatio="2">
+                <PanelContainer.PanelOverride>
+                    <gfx:StyleBoxFlat BackgroundColor="#1B1B1E" />
+                </PanelContainer.PanelOverride>
+                <BoxContainer Name="InfoContainer"
+                    Orientation="Vertical"
+                    VerticalExpand="True"
+                    HorizontalExpand="True"
+                    SizeFlagsStretchRatio="1"
+                    Margin="0">
+                    <Control
+                        Margin="5"
+                        MinWidth="350"
+                        VerticalExpand="True"
+                        HorizontalExpand="True"/>
+                </BoxContainer>
+            </PanelContainer>
+        </BoxContainer>
 
         </BoxContainer>
         <BoxContainer Name="ContentFooter" HorizontalExpand="True" SetHeight="28" Margin="1 0 2 1">
