--- a/Content.Client/_PS/Terradrop/TerradropConsoleMenu.xaml
+++ b/Content.Client/_PS/Terradrop/TerradropConsoleMenu.xaml
@@ -5,33 +5,21 @@
                       SetSize="1000 600"
                       MinSize="800 400"
                       Title="{Loc 'terradrop-console-menu-title'}">
-    <BoxContainer Name="ViewContainer"
+    <BoxContainer Orientation="Vertical"
                   HorizontalExpand="True"
-                  VerticalExpand="True"
-                  Access="Public"
-                  Orientation="Vertical">
-        <BoxContainer Orientation="Vertical"
-                      VerticalExpand="True"
+                  VerticalExpand="True">
+        <BoxContainer Orientation="Horizontal"
                       HorizontalExpand="True"
-                      MinSize="50 50"
-                      Margin="8">
-
-            <BoxContainer Orientation="Horizontal"
-                          Margin="8">
-                <Label Text="{Loc 'terradrop-console-threat-level'}"
-                       StyleClasses="LabelTitle" />
-                <!-- <Slider Name="LevelSlider" Size="100 40" MinValue="1" MaxValue="100" HorizontalExpand="True" /> -->
-                <!-- <Label Name="LevelLabel" Text="0" StyleClasses="LabelSubText" /> -->
-                <Button Name="StartTerradropButton"
-                        Access="Public"
-                        ToolTip=""
-                        HorizontalExpand="True"
-                        Margin="5 0 5 0"
-                        Text="{Loc 'terradrop-console-start-button'}"
-                        StyleClasses="LabelSubText" />
+                      VerticalExpand="False"
+                      MinHeight="60"
+                      Margin="10">
+            <BoxContainer Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True">
+                <Control VerticalExpand="True" />
+                <BoxContainer Name="ThreatLevelDisplayContainer" Orientation="Horizontal" HorizontalExpand="True"
+                              VerticalAlignment="Bottom" />
             </BoxContainer>
-
-            <BoxContainer Orientation="Horizontal"
+        </BoxContainer>
+        <BoxContainer Orientation="Horizontal"
                       HorizontalExpand="True"
                       VerticalExpand="True">
             <BoxContainer Orientation="Vertical"
@@ -39,13 +27,13 @@
                           HorizontalExpand="True"
                           SizeFlagsStretchRatio="3"
                           Margin="0 0 0 10">
-                <PanelContainer Name="ResearchesContainer" VerticalExpand="True" HorizontalExpand="True">
+                <PanelContainer Name="MapNodesContainer" VerticalExpand="True" HorizontalExpand="True">
                     <PanelContainer.PanelOverride>
                         <gfx:StyleBoxFlat BackgroundColor="#0F1419" />
                     </PanelContainer.PanelOverride>
                     <!-- Add ScrollContainer - vertical only -->
                     <ScrollContainer
-                        Name="MapScrollContainer"
+                        Name="MapNodesScrollContainer"
                         Access="Public"
                         HorizontalExpand="True"
                         VerticalExpand="True"
@@ -60,10 +48,11 @@
                             MouseFilter="Pass"
                             RectClipContent="True"
                             HorizontalAlignment="Left">
-                            <!-- There lives all of the terradrop maps -->
+                            <!-- There lives all of the map nodes -->
                         </ps:TerradropContainerPanel>
                     </ScrollContainer>
-                    <Button Name="RecenterButton" Text="{Loc 'terradrop-console-menu-recenter-button'}" MinHeight="40" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5 -5"/>
+                    <Button Name="RecenterButton" Text="{Loc 'terradrop-console-menu-recenter-button'}" MinHeight="40"
+                            HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5 -5" />
                 </PanelContainer>
             </BoxContainer>
             <PanelContainer SizeFlagsStretchRatio="2">
@@ -71,20 +60,18 @@
                     <gfx:StyleBoxFlat BackgroundColor="#1B1B1E" />
                 </PanelContainer.PanelOverride>
                 <BoxContainer Name="InfoContainer"
-                    Orientation="Vertical"
-                    VerticalExpand="True"
-                    HorizontalExpand="True"
-                    SizeFlagsStretchRatio="1"
-                    Margin="0">
+                              Orientation="Vertical"
+                              VerticalExpand="True"
+                              HorizontalExpand="True"
+                              SizeFlagsStretchRatio="1"
+                              Margin="0">
                     <Control
                         Margin="5"
                         MinWidth="350"
                         VerticalExpand="True"
-                        HorizontalExpand="True"/>
+                        HorizontalExpand="True" />
                 </BoxContainer>
             </PanelContainer>
-        </BoxContainer>
-
         </BoxContainer>
         <BoxContainer Name="ContentFooter" HorizontalExpand="True" SetHeight="28" Margin="1 0 2 1">
             <controls:StripeBack HasBottomEdge="False" HasMargins="False" HorizontalExpand="True">
